--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/test-utils": "^3.17.2",
-    "@nuxt/ui": "^3.0.2",
+    "@nuxt/ui-pro": "^3.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
