--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.37",
@@ -20,10 +21,13 @@
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
     "eslint": "^9.24.0",
     "lucide-vue-next": "^0.488.0",
     "motion-v": "^1.0.0-beta.2",
     "nuxt": "^3.16.2",
+    "pg": "^8.15.5",
     "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
@@ -31,5 +35,8 @@
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.0"
   }
 }
